# basic-1c

./: .gitignore  .gitmodules  LICENSE  README.md  build_all_lnx_armhf_gcc_rel.sh  build_all_lnx_x64_gcc_rel.sh  build_all_lnx_x86_gcc_rel.sh  build_all_win_mingw_rel.bat  build_all_win_msvc19_dbg.bat  set_exec_attr.sh
a1rv32/docs/: reference.md
a1rv32/docs/samples/: blink.asm  blink1.asm
a1rv32/source/: CMakeLists.txt  a1rv32.cpp  a1rv32.h  b1feat.h
a1stm8/: README.md
a1stm8/docs/: changelog  reference.md
a1stm8/docs/samples/: blink.asm  blink1.asm  condasm.asm  first.asm
a1stm8/source/: CMakeLists.txt  a1stm8.cpp  b1feat.h  errors.cpp  errors.h
b1c/docs/: changelog  ioctl.md  limits.md  reference.md
b1c/docs/samples/: README.md  ascchr.bsc  blink.bsc  blink1.bsc  blink2.bsc  blink2_tm.bsc  blink3.bsc  blink3_tm.bsc  blink4.bsc  const.bsc  data.bsc  heap.bsc  lsestm8l.bsc  reset.bsc  spimsd.bsc  spimss.bsc  spisld.bsc  spisls.bsc  st7565.bsc  st7565all.bsc  st7565all1.bsc  st7565frm.bsc  st7565m105.bsc  st7565mdata.bsc  (+5 more)
b1c/source/: CMakeLists.txt  b1c.cpp  b1c.h  b1extra.h  b1feat.h  errors.cpp  errors.h
c1stm8/: LICENSE  README.md
c1stm8/docs/: changelog
c1stm8/source/: CMakeLists.txt  b1extra.h  b1feat.h  c1stm8.cpp  c1stm8.h  errors.cpp  errors.h
common/docs/: changelog
common/lib/: DISP_GM12864_01A.b1c  DISP_GMG12864_06D_V2.b1c  DISP_JLX12832G_509.b1c  FONT_8X16T_CP437_7BIT_ST7565.b1c  FONT_8X16T_CP437_EXT_ST7565.b1c  FONT_8X16T_CP437_FULL_ST7565.b1c  FONT_8X16T_CP866_7BIT_ST7565.b1c  FONT_8X16T_CP866_EXT_ST7565.b1c  FONT_8X16T_CP866_FULL_ST7565.b1c  FONT_8X16_CP437_7BIT_ST7565.b1c  FONT_8X16_CP437_EXT_ST7565.b1c  FONT_8X16_CP437_FULL_ST7565.b1c  FONT_8X16_CP866_7BIT_ST7565.b1c  FONT_8X16_CP866_EXT_ST7565.b1c  FONT_8X16_CP866_FULL_ST7565.b1c  FONT_8X8T_CP437_7BIT_ST7565.b1c  FONT_8X8T_CP437_EXT_ST7565.b1c  FONT_8X8T_CP437_FULL_ST7565.b1c  FONT_8X8T_CP866_7BIT_ST7565.b1c  FONT_8X8T_CP866_EXT_ST7565.b1c  FONT_8X8T_CP866_FULL_ST7565.b1c  FONT_8X8_CP437_7BIT_ST7565.b1c  FONT_8X8_CP437_EXT_ST7565.b1c  FONT_8X8_CP437_FULL_ST7565.b1c  FONT_8X8_CP866_7BIT_ST7565.b1c  FONT_8X8_CP866_EXT_ST7565.b1c  FONT_8X8_CP866_FULL_ST7565.b1c  FONT_8x16_CP850_7BIT_ST7565.b1c  FONT_8x16_CP850_EXT_ST7565.b1c  FONT_8x16_CP850_FULL_ST7565.b1c  FONT_8x16_ISO8859_1_7BIT_ST7565.b1c  FONT_8x16_ISO8859_1_EXT_ST7565.b1c  FONT_8x16_ISO8859_1_FULL_ST7565.b1c  FONT_8x16_ISO8859_5_7BIT_ST7565.b1c  FONT_8x16_ISO8859_5_EXT_ST7565.b1c  FONT_8x16_ISO8859_5_FULL_ST7565.b1c  FONT_8x8_CP850_7BIT_ST7565.b1c  FONT_8x8_CP850_EXT_ST7565.b1c  FONT_8x8_CP850_FULL_ST7565.b1c  FONT_8x8_ISO8859_1_7BIT_ST7565.b1c  (+10 more)
common/setup/: lnx_deb_distr.sh  lnx_tar_gz_distr.sh  win_7zip_zip_distr.bat
common/source/: Utils.cpp  Utils.h  a1.cpp  a1.h  a1errors.cpp  a1errors.h  b1cmp.cpp  b1cmp.h  c1.cpp  c1.h  c1errors.cpp  c1errors.h  gitrev.h  moresym.cpp  moresym.h  stm8.h  trgsel.cpp  trgsel.h  version.h
distr/: README.md  b1c_lnx_amd64_gcc_1.0.0-12.deb  b1c_lnx_amd64_gcc_1.0.0-14.deb  b1c_lnx_amd64_gcc_1.0.0-15.deb  b1c_lnx_amd64_gcc_1.0.0-16.deb  b1c_lnx_amd64_gcc_1.0.0-17.deb  b1c_lnx_amd64_gcc_1.0.0-18.deb  b1c_lnx_amd64_gcc_1.0.0-19.deb  b1c_lnx_amd64_gcc_1.0.0-21.deb  b1c_lnx_armhf_gcc_1.0.0-12.deb  b1c_lnx_armhf_gcc_1.0.0-14.deb  b1c_lnx_armhf_gcc_1.0.0-15.deb  b1c_lnx_armhf_gcc_1.0.0-16.deb  b1c_lnx_armhf_gcc_1.0.0-17.deb  b1c_lnx_armhf_gcc_1.0.0-18.deb  b1c_lnx_armhf_gcc_1.0.0-19.deb  b1c_lnx_armhf_gcc_1.0.0-21.deb  b1c_lnx_i386_gcc_1.0.0-12.deb  b1c_lnx_i386_gcc_1.0.0-14.deb  b1c_lnx_i386_gcc_1.0.0-15.deb  b1c_lnx_i386_gcc_1.0.0-16.deb  b1c_lnx_i386_gcc_1.0.0-17.deb  b1c_lnx_i386_gcc_1.0.0-18.deb  b1c_lnx_i386_gcc_1.0.0-19.deb  b1c_lnx_i386_gcc_1.0.0-21.deb  install.sh  uninstall.sh
env/: sample_lnx_armhf_gcc_env.sh  sample_win_x64_mingw_env.bat  sample_win_x86_mingw_env.bat
setup/b1c/: lnx_armhf_gcc_deb.sh  lnx_armhf_gcc_tar_gz.sh  lnx_x64_gcc_deb.sh  lnx_x64_gcc_tar_gz.sh  lnx_x86_gcc_deb.sh  lnx_x86_gcc_tar_gz.sh  win_x64_mingw_7zip_zip.bat  win_x86_mingw_7zip_zip.bat
(+556 files in other folders)
